--- a/app/src/main/res/layout/activity_add_collection.xml
+++ b/app/src/main/res/layout/activity_add_collection.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:title="컬렉션 생성"
-        style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
-
-    <LinearLayout
+<layout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="컬렉션 이름"/>
-        <EditText
-            android:id="@+id/editCollectionName"
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="컬렉션1"/>
+            app:title="컬렉션 생성"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="컬렉션 이름"/>
+            <EditText
+                android:id="@+id/editCollectionName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="컬렉션1"/>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
