--- a/app/src/main/res/layout/fragment_add_custom.xml
+++ b/app/src/main/res/layout/fragment_add_custom.xml
@@ -1,45 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="제목"/>
-    <EditText
-        android:id="@+id/editTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="작품 이름"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="URL"/>
-    <EditText
-        android:id="@+id/editURL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="https://google.com"/>
-
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.pragmo.kyeootomi.viewmodel.AddItemViewModel"/>
+    </data>
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp">
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:text="다운로드 옵션:"/>
+            android:text="제목"/>
+        <EditText
+            android:id="@+id/editTitle"
+            android:onTextChanged="@{viewModel::onTitleChanged}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="작품 이름"/>
+
         <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="URL"/>
+        <EditText
+            android:id="@+id/editURL"
+            android:onTextChanged="@{viewModel::onUrlChanged}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="https://google.com"/>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="다운로드 불가능"
-            android:textColor="@color/red"/>
+            android:layout_marginTop="20dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="다운로드 옵션:"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="다운로드 불가능"
+                android:textColor="@color/red"/>
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
