--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout>
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.pragmo.kyeootomi.viewmodel.MainViewModel"/>
+    </data>
+
     <androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -53,7 +58,6 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
-            app:headerLayout="@layout/header_main"
-            app:menu="@menu/menu_main"/>
+            app:headerLayout="@layout/header_main"/>
     </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
