--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -3,43 +3,44 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/rootMain"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/imgIcon"
             android:layout_width="23dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="20dp"
+            android:layout_margin="20dp"
             android:adjustViewBounds="true"
             android:src="@drawable/ic_hitomi"/>
+
         <TextView
             android:id="@+id/txtTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/imgIcon"
-            android:layout_marginLeft="20dp"
+            android:paddingVertical="15dp"
             android:text="error loading title"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:layout_weight="1" />
 
         <ImageView
             android:id="@+id/imgMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="20dp"
             android:src="@drawable/baseline_expand_more_24"/>
-    </RelativeLayout>
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/wrapview"
-        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
     </FrameLayout>
 
 </LinearLayout>
