--- a/app/src/main/res/drawable/img_unloadable.xml
+++ b/app/src/main/res/drawable/img_unloadable.xml
@@ -3,4 +3,6 @@
     <stroke
         android:width="1dp"
         android:color="@color/gray"/>
+    <solid
+        android:color="@android:color/white"/>
 </shape>
