--- a/app/src/main/res/layout/tag_hitomi.xml
+++ b/app/src/main/res/layout/tag_hitomi.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/ic_hitomi_tag"
-    android:textColor="@color/white"
+    android:textColor="@android:color/white"
     android:text="female:sole_female"
     android:paddingHorizontal="5dp"
     android:layout_margin="3dp"
