--- a/app/src/main/res/drawable/img_unloadable.xml
+++ b/app/src/main/res/drawable/img_unloadable.xml
@@ -4,5 +4,5 @@
         android:width="1dp"
         android:color="@color/gray"/>
     <solid
-        android:color="@android:color/white"/>
+        android:color="@color/background"/>
 </shape>
