--- a/app/src/main/res/layout/activity_hitomi_view.xml
+++ b/app/src/main/res/layout/activity_hitomi_view.xml
@@ -12,6 +12,12 @@
         android:layout_height="match_parent"
         android:background="@android:color/black">
 
+        <com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/imgManga"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"/>
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
@@ -19,12 +25,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"/>
 
-        <com.github.chrisbanes.photoview.PhotoView
-            android:id="@+id/imgManga"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:layout_centerInParent="true"/>
         <LinearLayout
             android:id="@+id/wrapCoverError"
             android:layout_width="match_parent"
@@ -32,40 +32,39 @@
             android:orientation="vertical"
             android:gravity="center"
             android:background="@drawable/img_unloadable"
-            android:layout_centerInParent="true"
-            android:visibility="gone">
+            android:layout_centerInParent="true">
 
             <ImageView
                 android:id="@+id/imgError"
-                android:layout_width="50dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ic_error"
+                android:src="@drawable/shock_man"
                 android:contentDescription="Manga" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
-                android:textSize="10sp"
-                android:text="작품 이미지를\n불러올 수 없습니다"/>
+                android:textSize="13sp"
+                android:text="앗..! 작품 이미지 로딩에 실패했어요ㅜㅜ\n다운로드 중인 경우 잠시 후 다시 시도해주세요!\n최대한 빨리 받도록 노력할게요. 죄송합니다ㅠㅠ"/>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/wrapSlider"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="25dp"
-            android:orientation="horizontal"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="10dp"
             android:gravity="center_vertical"
+            android:background="@color/transparent_black"
             android:layout_alignParentBottom="true">
 
-            <!--
-                android:text="1"-->
             <TextView
                 android:id="@+id/txtNumPage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="20dp"
                 android:gravity="end|center"
                 android:text="@{viewModel.numPage.toString()}"
                 android:textColor="@android:color/white"
@@ -76,7 +75,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_marginHorizontal="10dp"
+                android:layout_marginHorizontal="5dp"
                 android:valueFrom="1"
                 android:valueTo="@{viewModel.countPages}"
                 android:layoutDirection="ltr"
@@ -95,7 +94,6 @@
                 android:id="@+id/txtCountPages"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="20dp"
                 android:gravity="start|center"
                 android:text="@{viewModel.countPages.toString()}"
                 android:textColor="@android:color/white"
