--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:backgroundTint="@color/primary"
-                app:iconTint="@color/white"
+                app:iconTint="@android:color/white"
                 app:icon="@android:drawable/ic_input_add"
                 app:layout_anchor="@id/scrollView"
                 app:layout_anchorGravity="bottom|right"
