--- a/app/src/main/res/layout/fragment_item_hitomi.xml
+++ b/app/src/main/res/layout/fragment_item_hitomi.xml
@@ -26,16 +26,17 @@
             android:background="@drawable/img_unloadable">
             <ImageView
                 android:id="@+id/imgError"
-                android:layout_width="50dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/ic_error"/>
+                android:src="@drawable/shock_man"/>
             <TextView
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="10sp"
-                android:text="작품 이미지를\n불러올 수 없습니다"/>
+                android:text="작품 이미지 로딩 실패.\n새로고침 또는 다시받기를 권장드려요"/>
         </LinearLayout>
     </FrameLayout>
     <LinearLayout
