--- a/app/src/main/res/layout/header_main.xml
+++ b/app/src/main/res/layout/header_main.xml
@@ -12,7 +12,7 @@
         android:layout_alignLeft="@id/txtPath"
         android:layout_marginBottom="5dp"
         android:text="내 컬렉션"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="25sp"/>
 
     <TextView
@@ -24,7 +24,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginBottom="20dp"
         android:text=""
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="12sp" />
 
 </RelativeLayout>
