--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,11 +3,12 @@
     <style name="Base.Theme.Kyeootomi" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/primary</item>
+        <item name="android:colorBackground">@color/background</item>
     </style>
 
     <style name="Theme.Kyeootomi" parent="Base.Theme.Kyeootomi" />
     <style name="Theme.Kyeootomi.HitomiViewer" parent="Theme.Kyeootomi">
-        <item name="colorPrimary">@android:color/black</item>
+        <item name="colorPrimary">@color/transparent_black</item>
         <item name="colorPrimaryDark">@android:color/black</item>
         <item name="android:navigationBarColor">@android:color/black</item>
     </style>
