--- a/app/src/main/res/layout/item_document.xml
+++ b/app/src/main/res/layout/item_document.xml
@@ -10,6 +10,14 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical">
 
+        <CheckBox
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:minWidth="0dp"
+            android:visibility="gone"/>
+
         <ImageView
             android:id="@+id/imgIcon"
             android:layout_width="23dp"
@@ -25,7 +33,9 @@
             android:paddingVertical="15dp"
             android:text="error loading title"
             android:textSize="16sp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:maxLines="1"
+            android:ellipsize="middle"/>
 
         <ImageView
             android:id="@+id/imgMore"
