--- a/app/src/main/res/layout/fragment_update_hitomi.xml
+++ b/app/src/main/res/layout/fragment_update_hitomi.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.pragmo.kyeootomi.viewmodel.UpdateHitomiItemViewModel"/>
+            type="com.pragmo.kyeootomi.viewmodel.item.update.UpdateHitomiViewModel"/>
     </data>
 
     <LinearLayout
