--- a/app/src/main/res/layout/activity_read_hitomi.xml
+++ b/app/src/main/res/layout/activity_read_hitomi.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.pragmo.kyeootomi.viewmodel.HitomiViewViewModel"/>
+            type="com.pragmo.kyeootomi.viewmodel.item.read.ReadHitomiViewModel"/>
     </data>
     <RelativeLayout
         android:id="@+id/rootMain"
