--- a/app/src/main/res/layout/dialog_form_collection.xml
+++ b/app/src/main/res/layout/dialog_form_collection.xml
@@ -15,6 +15,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="컬렉션1"
-            android:onTextChanged="@{viewModel.onFormCollectionNameChanged}"/>
+            android:text="@={viewModel.formCollectionName}"/>
     </LinearLayout>
 </layout>
