--- a/app/src/main/res/layout/item_custom.xml
+++ b/app/src/main/res/layout/item_custom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <LinearLayout
-        android:id="@+id/rootMain"
+        android:id="@+id/rootItem"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/ic_hitomi"/>
+            android:src="@drawable/ic_custom"/>
 
         <TextView
             android:id="@+id/txtTitle"
@@ -38,7 +39,7 @@
             android:ellipsize="middle"/>
 
         <ImageView
-            android:id="@+id/imgMore"
+            android:id="@+id/imgArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -46,11 +47,30 @@
             android:src="@drawable/baseline_expand_more_24"/>
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/wrapview"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/expandableView"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="10dp">
 
-    </FrameLayout>
+        <TextView
+            android:id="@+id/txtWebTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="제목 : " />
 
+        <TextView
+            android:id="@+id/txtURL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="URL : " />
+        <Button
+            android:id="@+id/btnWebview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="웹에서 보기"/>
+    </LinearLayout>
 </LinearLayout>
