--- a/app/src/main/res/menu/menu_main_select_item.xml
+++ b/app/src/main/res/menu/menu_main_select_item.xml
@@ -11,4 +11,7 @@
     <item
         android:id="@+id/menuDeleteItem"
         android:title="삭제"/>
+    <item
+        android:id="@+id/menuMoveCollection"
+        android:title="컬렉션 이동"/>
 </menu>
