ready to release beta

--- a/app/src/main/res/menu/menu_main_select_item.xml
+++ b/app/src/main/res/menu/menu_main_select_item.xml
@@ -14,4 +14,7 @@
     <item
         android:id="@+id/menuMoveCollection"
         android:title="컬렉션 이동"/>
+    <item
+        android:id="@+id/menuSaveGallery"
+        android:title="갤러리에 복사"/>
 </menu>
