--- a/app/src/main/res/layout/activity_online_viewer.xml
+++ b/app/src/main/res/layout/activity_online_viewer.xml
@@ -17,9 +17,14 @@
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
 
-        <WebView
-            android:id="@+id/webView"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refreshWebView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+            <WebView
+                android:id="@+id/webView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 </layout>
